@@ -1,6 +1,12 @@
-$Id: ChangeLog,v 1.381 2007/06/14 07:32:52 freckle Exp $
+$Id: ChangeLog,v 1.382 2007/07/09 13:38:50 olereinhardt Exp $
 
-2007-14-06  Matthias Ringwald <mringwal@inf.ethz.ch>
+2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
+	* dev/twbbif.c: Added default TWI_DELAY for avr architecture 
+        to allow in-tree compilation
+	* net/Makefile:	Commented out igmp support as long as it does 
+        not exists to allow in-tree compilation
+
+2007-06-14  Matthias Ringwald <mringwal@inf.ethz.ch>
 	* include/sys/thread.c, arch/avr/os/nutinit.c: NutThreadSetSleepMode
 	now returns previous sleep mode
     
